# lldpd

./: .clang-format  .dir-locals.el  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  CHANGELOG  Dockerfile  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  default.nix  doxygen.cfg  edit.am  fabfile.py  flake.nix  get-version  lldpd.spec  pyproject.toml  site-production.yaml  site.yaml  tasks.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  cifuzz.yml  coverity.yml  fuzz.yml  style.yml  tests.yml
.travis/: install.sh  run.sh
content/: .nojekyll  404.html  features.html  index.html  installation.html  security.html  usage.html
content/media/: meta.yaml
content/media/css/: common.less  lldpd.0.normalize.less  lldpd.1.blank.less  lldpd.2.article.less  lldpd.3.code.less  lldpd.4.images.less  lldpd.5.menu.less  lldpd.99.typography.less  lldpd.less
content/media/js/: mp.js
debian/: README.Debian  changelog  control  copyright  init.d  liblldpctl-dev.install  liblldpctl-dev.lintian-overrides  lldpd.init.d  lldpd.install  lldpd.lintian-overrides  lldpd.postinst  lldpd.postrm  lldpd.service  lldpd.symbols  lldpd.upstart  postinst  postrm  rules  watch
debian/etc/bash_completion.d/: lldpcli
debian/source/: lintian-overrides
extensions/: combine.py  css.py  text.py
include/linux/: ethtool.h  if_link.h  netlink.h
layout/: badges.j2  base.j2  menu.j2
libevent/: Makefile.in  aclocal.m4  configure
libevent/autom4te.cache/: output.1  requests  traces.0  traces.1
libevent/include/: Makefile.in
libevent/sample/: Makefile.in
libevent/test/: Makefile.in
m4/: alignof.m4  args.m4  ax_cflags_gcc_option.m4  ax_ld_check_flag.m4  ax_lib_readline.m4  ax_prog_doxygen.m4  config_subdirs.m4  ctors.m4  ethtool.m4  fdsetsize.m4  jansson.m4  json-c.m4  ld-version-script.m4  libedit.m4  libevent.m4  libnl3.m4  os.m4  progname.m4  seccomp.m4  snmp.m4  stdint.m4  systemtap.m4  xml2.m4
man/: Makefile.am  lldpctl.8  lldpd.8
misc/: test-addmulti.c  test-align.c  test-parselldp.c  test-snmp.c
osx/: Makefile.am  distribution.xml.in  dont-install-launchd-plist.patch  im.bernat.lldpd.plist.in  lipo  lldpd.rb
osx/resources/: Welcome.rtf  license.html  license.txt  welcome.html
osx/scripts/: postinstall.in
redhat/: lldpd.init  lldpd.init.suse  lldpd.spec  lldpd.sysconfig
src/: Makefile.am  agent.c  agent.h  agent_priv.c  cdp.c  cdp.h  client.c  compat.h  ctl-server.c  ctl.c  ctl.h  display.c  dmi.c  dsa.c  edp.c  edp.h  event.c  features.c  frame.c  frame.h  getifaddrs.c  interfaces.c  iov.c  kv_writer.c  llc.h  lldp-const.h  lldp.c  lldp.h  lldpctl.c  lldpctl.h  lldpd-structs.c  lldpd-structs.h  lldpd.c  lldpd.h  log.c  log.h  main.c  malloc.c  marshal.c  marshal.h  (+12 more)
src/client/: Makefile.am  README.conf  _lldpcli  actions.c  client.h  commands.c  conf-dot3.c  conf-inv.c  conf-lldp.c  conf-med.c  conf-power.c  conf-system.c  conf.c  display.c  jansson_writer.c  json_writer.c  jsonc_writer.c  kv_writer.c  lldpcli.8  lldpcli.8.in  lldpcli.c  lldpcli.supp  lldpctl.8  lldpctl.c  lldpctl.supp  misc.c  org_tlv_conf.c  org_tlv_conf.h  org_tlv_handler.c  org_tlv_handler.h  org_tlv_handler_cisco.c  oui_lookup.c  oui_lookup.h  show.c  text_writer.c  tokenizer.c  utf8.c  writer.h  xml_writer.c
src/client/completion/: _lldpcli
src/client/org-tlvs.conf.d/: cisco.conf  juniper.conf
src/compat/: Makefile.am  asprintf.c  clock_gettime.c  compat.h  daemon.c  empty.c  fgetln.c  getifaddrs.c  getline.c  malloc.c  realloc.c  setproctitle.c  strlcpy.c  strndup.c  strnlen.c  strtonum.c  vsyslog.c
src/daemon/: Makefile.am  agent.c  agent.h  agent_priv.c  bitmap.c  cdp.c  cdp.h  client.c  dmi-dummy.c  dmi-freebsd.c  dmi-linux.c  dmi-openbsd.c  dmi-osx.c  dmi.c  edp.c  event.c  forward-bsd.c  forward-linux.c  forward-solaris.c  frame.c  frame.h  interfaces-bpf.c  interfaces-bsd.c  interfaces-freebsd.c  interfaces-linux.c  interfaces-solaris.c  interfaces.c  lldp-tlv.h  lldp.c  lldpd.8  lldpd.8.in  lldpd.c  lldpd.h  lldpd.service.in  lldpd.supp  lldpd.tmpfiles.conf.in  main.c  netlink.c  pattern.c  priv-bpf.c  (+13 more)
src/daemon/protocols/: cdp.c  cdp.h  edp.c  edp.h  lldp.c  sonmp.c  sonmp.h
src/lib/: Makefile.am  atom-private.c  atom.c  atom.h  connection.c  errors.c  fixedpoint.c  fixedpoint.h  helpers.c  helpers.h  lldpctl.h  lldpctl.hpp  lldpctl.map  lldpctl.pc.in  private.h
src/lib/atoms/: chassis.c  config.c  custom.c  dot1.c  dot3.c  interface.c  med.c  mgmt.c  port.c
tests/: Dockerfile.wheezy  FuzzDecode.c  Makefile.am  R1.expected  build-fuzzer.sh  build.sh  check-compat.h  check_bitmap.c  check_cdp.c  check_edp.c  check_fixedpoint.c  check_ifaddrs.c  check_lldp.c  check_marshal.c  check_pack.c  check_pattern.c  check_snmp.c  check_sonmp.c  common.c  common.h  decode.c  fuzz_cdp.c  fuzz_edp.c  fuzz_lldp.c  fuzz_sonmp.c  integration-tests.in  lldpcli.conf  many-neighbors.py  pcap-hdr.h
tests/ci/: install.sh  openbsd-knf-style.el  release.sh  run.sh
tests/fuzzer/: build.sh
tests/fuzzer/seed-corpus/: cdp.1.raw  edp.0.raw  edp.2.raw  sonmp.0.raw
tests/fuzzing_seed_corpus/fuzz_cdp_seed_corpus/: cdp.3.raw
tests/fuzzing_seed_corpus/fuzz_edp_seed_corpus/: edp.1.raw  edp.4.raw
tests/fuzzing_seed_corpus/fuzz_lldp_seed_corpus/: lldp.1.raw
tests/fuzzing_seed_corpus/fuzz_sonmp_seed_corpus/: sonmp.1.raw
tests/integration/: .gitignore  README.md  conftest.py  requirements.txt  test_basic.py  test_configinventory.py  test_custom.py  test_dot1.py  test_dot3.py  test_interfaces.py  test_lldpcli.py  test_med.py  test_pcap.py  test_protocols.py  test_snmp.py
tests/integration/data/: 8023bt.pcap  connectx.pcap  med-loc-malformed.pcap  sg200.pcap
tests/integration/fixtures/: namespaces.py  network.py  programs.py
tests/seed/fuzz-decode_seed_corpus/: cdp.0.raw  cdp.2.raw  edp.3.raw  lldp.0.raw  sonmp.2.raw
